<!--Meet Patel N01460090 Section:- RNB-->
<resources>
    <string name="app_name">Meet Patel N01460090</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="nav_home">Home</string>
    <string name="nav_download">Download</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_file_content">File Content</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_open_msg">Meet Menu Open</string>
    <string name="nav_close_msg">Meet Menu Closing</string>
    <string name="nav_name">Meet Patel</string>
    <string name="nav_mail">meetpatel12302@gmail.com</string>
    <string name="home_frag_heading">Home</string>
    <string name="download_frag_heading">Download</string>
    <string name="home_frag_date">Date</string>
    <string name="home_enter_btn">Enter</string>
    <string name="home_read_btn">Read File</string>
    <string name="home_frag_toast_text">\"Written to File: \"</string>
    <string name="home_frag_toast_text_read">\"Reading from File: \"</string>
    <string name="date_home_frag">hh:mm:ss a</string>
    <string name="home_file_name">meet.txt</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_message">Do you want to Exit?</string>
    <string name="alert_title">Meet Patel N01460090</string>
    <string name="enter_text_home">Enter some info</string>
    <string name="listview_razer">Razer</string>
    <string name="listview_apple">Apple</string>
    <string name="listview_twitch">Twitch</string>
    <string name="download_title">Downloading</string>
    <string name="download_desc">Downloading picture</string>
    <string name="download_granted">Permission granted, press again to download</string>
    <string name="download_denied">Permission denied</string>
    <string name="construction">Under Construction</string>
    <string name="radio_12hr_format">12hr Format</string>
    <string name="radio_24hr_format">24hr Format</string>
    <string name="time_settings">Time Settings</string>
    <string name="radio_text_12hr">12hr</string>
    <string name="radio_text_24hr">24hr</string>
    <string name="bundle_time_put_string">setTime</string>
    <string name="bundle_time_key">sentTime</string>
    <string name="bundle_background_put_string">setHomeBackground</string>
    <string name="bundle_background_key">SentHomeBackground</string>
    <string name="radio_text_pink">Pink</string>
    <string name="radio_text_white">White</string>
    <string name="radio_text_blue">Blue</string>
    <string name="weather_last_name">Patel N01460090</string>
    <string name="weather_head_tv">Weather</string>
    <string name="weather_toast_error">Error</string>
    <string name="weather_longitude">Longitude</string>
    <string name="weather_latitude">Latitude</string>
    <string name="weather_country">Country</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_city">City</string>
    <string name="weather_description">Description</string>
    <string name="file_content_delete_btn">Delete</string>
    <string name="file_content_file_deleted">File Deleted</string>
    <string name="file_content_no_content">No content</string>
    <string name="file_content_path_name">/data/user/0/meet.patel.n01460090/files/meet.txt</string>
    <string name="file_content_child_file_name">meet.txt</string>
    <string-array name="cities">
        <item>Toronto</item>
        <item>London</item>
        <item>New Delhi</item>
        <item>Sydney</item>
        <item>Paris</item>
    </string-array>

</resources>