<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MeetNavHome"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_baseline_home_24" />
        <item
            android:id="@+id/MeetNavDownload"
            android:title="@string/nav_download"
            android:icon="@drawable/ic_baseline_download_24"/>
        <item
            android:id="@+id/MeetNavWeather"
            android:title="@string/nav_weather"
            android:icon="@drawable/ic_baseline_wb_sunny_24"/>
        <item
            android:id="@+id/MeetNavFileContent"
            android:title="@string/nav_file_content"
            android:icon="@drawable/ic_baseline_insert_drive_file_24"/>
        <item
            android:id="@+id/MeetNavSettings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
</menu>