<?xml version="1.0" encoding="utf-8"?>
<!--Meet Patel N01460090 Section:- RNB-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsScreen"
    android:background="#D7DDFF">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/MeetConstructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/construction"
        android:textSize="30sp"
        android:layout_marginBottom="600sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/MeetConstructionImageView"
        android:layout_width="264dp"
        android:layout_height="127dp"
        android:src="@drawable/construction"
        android:layout_marginBottom="350sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/MeetTimeSettingsTextView"
        android:layout_width="156dp"
        android:layout_height="62dp"
        android:layout_marginEnd="190sp"
        android:layout_marginBottom="-10sp"
        android:text="@string/time_settings"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <RadioGroup
        android:id="@+id/MeetTimeRadioGroup"
        android:layout_width="188dp"
        android:layout_height="100dp"
        android:layout_marginEnd="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <RadioButton
            android:id="@+id/Meet12HrRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_12hr_format"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/Meet24HrRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_24hr_format"
            android:textSize="24sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/MeetHomeScreenColorSettingsTextView"
        android:layout_width="209dp"
        android:layout_height="79dp"
        android:text="Home Screen Background Color"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <RadioGroup
        android:id="@+id/MeetHomeBackgroundColorSettingsRadioGroup"
        android:layout_width="170dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773">

        <RadioButton
            android:id="@+id/MeetPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pink"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/MeetBlue"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="Blue"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/MeetWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="White"
            android:textSize="24sp"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>